# rename-kicad-project

./: .gitignore  .python-version  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml
src/rename_kicad_project/: __main__.py  cli.py  logger.py  manipulator.py
tests/: conftest.py
tests/integration/: test_rename_kicad_project.py
tests/unit/rename_kicad_project/: test_manipulator.py
tests/utils/: common_case.py  fake_project.py
